Closed Bug 247426 Opened 20 years ago Closed 20 years ago

resizing toolbar causes back/forward button images to be wrong size

Categories

(Camino Graveyard :: Toolbars & Menus, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino0.8

People

(Reporter: jaas, Assigned: mikepinkerton)

Details

Steps:

- Make your toolbar use small icons
- close the customization sheet
- open the customization sheet

Result:
- funny images

Expected:
- the right image sizes
I think we can safely sneak this one in for 0.8. Should be a trivial fix, and it
looks pretty sloppy like this. Basically it shows up whenever anyone with small
icons customizes the toolbar.
Target Milestone: --- → Camino0.8
fixed branch and trunk
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.