fix problem where showing customize toolbar with small icons would cause image to grow (bug 247426)